--- a/index.html
+++ b/index.html
@@ -128,15 +128,14 @@
     </main>
 
     <footer>
-
-      <ul>
-        <li class="logoFont">Ohmyfood</li>
-        <li><i class="fas fa-utensils"></i>Proposer un restaurant</li>
-        <li><i class="fas fa-hands-helping"></i>Devenir partenaire</li>
-        <li>Mentions légales</li>
-        <li>Contact</li>
-      </ul>
-
+        <ul class="endPage">
+          <li class="endPage__title logoFont">ohmyfood</li>
+          <li class="endPage__lign"><a href="#"><i class="fas fa-sm fa-utensils"></i>Proposer un restaurant</a></li>
+          <li class="endPage__lign"><a href="#"><i class="fas fa-xs fa-hands-helping"></i>Devenir partenaire</a></li>
+          <li class="endPage__lign"><a href="#">Mentions légales</a></li>
+          <!--Mettre en place lien vers e-mail-->
+          <li class="endPage__lign"><a href="#">Contact</a></li> 
+        </ul>
     </footer>
   </body>
 </html>
