Ajout du lien vers page accueil dans le header

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
   <body>
     <header>
       <div class="mySite">
-        <!-- Pour version page :
+        <!-- Pour version page :-->
         <div class="mySite__backToMenu">
-          <i class="fas fa-lg fa-arrow-left"></i>
-        </div> -->
+          <a href="index.html"><i class="fas fa-lg fa-arrow-left"></i></a>
+        </div> 
         <h1 class="mySite__title">ohmyfood</h1>
       </div>
     </header>
