--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <!-- Meta description-->
     <meta name="description" content="Ohmyfood est une entreprise de commande de repas en ligne"/>
 
-    <!-- Lien du fichier CSS-->
+    <!-- Link to CSS file-->
     <link rel="stylesheet" href="css/main.css" />
 
-    <!-- Connexion à Fontawesome -->
+    <!-- Connect to Fontawesome -->
     <script src="https://kit.fontawesome.com/ed843d0fbb.js" crossorigin="anonymous"></script>
 
     <title>Ohmyfood</title>
@@ -20,8 +20,8 @@
   <body>
     <header>
       <div class="mySite">
-        <!-- Pour version page :-->
-        <div class="mySite__backToMenu">
+        <!-- For next page : displayNone-->
+        <div class="mySite__backToMenu displayNone">
           <a href="index.html"><i class="fas fa-lg fa-arrow-left"></i></a>
         </div> 
         <h1 class="mySite__title">ohmyfood</h1>
@@ -30,12 +30,12 @@
 
     <main>
 
-      <section id="citySelection">
-        <!-- Titre à donner : h2 pour vérificateur W3C : Display:none -->
-        <h2>Selectionner votre ville</h2>
-        <div>
-          <a href="#"><i class="fas fa-map-marker-alt"></i></a>
-          <input type="text" placeholder="Paris, Belleville">
+      <section class="citySelection">
+        <!-- Title for W3C : Display:none -->
+        <h2 class="displayNone">Selectionner votre ville</h2>
+        <div class="citySelection__chooseBlock">
+          <a class="citySelection__icon" href="#"><i class="fas fa-sm fa-map-marker-alt"></i></a>
+          <input class="citySelection__customerChoice" type="text" placeholder="Paris, Belleville">
         </div>
 
       </section>
