Ajout des sections citySelection exploreRestaurants et tutorial

--- a/index.html
+++ b/index.html
@@ -40,18 +40,19 @@
 
       </section>
 
-      <section id="exploreRestaurants" style="display: none;"><!-- Style Display:none à supprimer-->
-        <h2>Réservez le menu qui vous convient</h2>
-        <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-        <button>Explorer nos restaurants</button>
+      <section class="exploreRestaurants">
+        <h2 class="exploreRestaurants__title">Réservez le menu qui vous convient</h2>
+        <p class="exploreRestaurants__text">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
+        <button class="btn btn__main">Explorer nos restaurants</button>
       </section>
 
-      <section id="siteTutorial" style="display: none;"><!-- Style Display:none à supprimer-->
-        <h2>Fonctionnement</h2>
-        <button><i class="fas fa-mobile-alt"></i>Choisissez un restaurant</button>
-        <button><i class="fas fa-list-ul"></i>Composez votre menu</button>
-        <button><i class="fas fa-store"></i>Dégustez au restaurant</button>
-    
+      <section class="tutorial">
+        <h2 class="tutorial__title">Fonctionnement</h2>
+        <div class="tutorial__buttons">
+          <button class="btn btn__tutorial"><i class="fas fa-lg fa-mobile-alt"></i>Choisissez un restaurant</button>
+          <button class="btn btn__tutorial"><i class="fas fa-list-ul"></i>Composez votre menu</button>
+          <button class="btn btn__tutorial"><i class="fas fa-store"></i>Dégustez au restaurant</button>
+        </div>
       </section>
 
       <section id="restaurantsSelection" style="display: none;"><!-- Style Display:none à supprimer-->
