Ajout du responsive sur les 4 pages restaurants + lien dans l'index.html

--- a/index.html
+++ b/index.html
@@ -114,10 +114,9 @@
 
       <section id="restaurantsSelection" class="ourRestaurants">
         <h2 class="ourRestaurants__title">Restaurants</h2>
-        <div class="ourRestaurants__selection">
+        <nav class="ourRestaurants__selection">
           <!--First restaurant-->
-          <!--! Lien à ajouter-->
-          <div class="cardRestaurant cardRestaurant--new">
+          <a href="html/lapalettedugout.html" class="cardRestaurant cardRestaurant--new">
             <img class="cardRestaurant__image" src="src/images/la_palette_du_gout.jpg" alt="Filet de Turbot aux agrumes">
             <div class="cardRestaurant__info">
               <div class="cardRestaurant__text">
@@ -142,11 +141,10 @@
                 </div>
               </div>
             </div>
-          </div>
+          </a>
 
           <!--Second restaurant-->
-          <!--! Lien à ajouter-->
-          <div class="cardRestaurant cardRestaurant--new">
+          <a href="html/lanoteenchantee.html" class="cardRestaurant cardRestaurant--new">
             <img class="cardRestaurant__image" src="src/images/la_note_enchantee.jpg" alt="Mijoté de queue de boeuf">
             <div class="cardRestaurant__info">
               <div class="cardRestaurant__text">
@@ -165,11 +163,10 @@
                 </div>
               </div>
             </div>
-          </div>
+          </a>
 
           <!--Third restaurant-->
-          <!--! Lien à ajouter-->
-          <div class="cardRestaurant">
+          <a href="html/alafrancaise.html" class="cardRestaurant">
             <img class="cardRestaurant__image" src="src/images/a_la_francaise.jpg" alt="Coquilles Saint-Jacques">
             <div class="cardRestaurant__info">
               <div class="cardRestaurant__text">
@@ -188,11 +185,10 @@
                 </div>
               </div>
             </div>
-          </div>
+          </a>
 
           <!--Fourth restaurant-->
-          <!--! Lien à ajouter-->
-          <div class="cardRestaurant">
+          <a href="html/ledelicedessens.html" class="cardRestaurant">
             <img class="cardRestaurant__image" src="src/images/le_delice_des_sens.jpg" alt="Bouchée de homard croustillant">
             <div class="cardRestaurant__info">
               <div class="cardRestaurant__text">
@@ -211,9 +207,9 @@
                 </div>
               </div>
             </div>
-          </div>
+          </a>
 
-        </div>
+        </nav>
       
       </section>
     </main>
