Ajout des tailles d'images dans le html

--- a/html/alafrancaise.html
+++ b/html/alafrancaise.html
@@ -32,7 +32,7 @@
       <section class="restaurant">
         
         <h2 class="displayNone">Photo à la française</h2>
-        <img class="restaurant__image" src="../src/images/a_la_francaise.jpg" alt="Coquilles Saint-Jacques"><!--A modifier suivant page-->
+        <img class="restaurant__image" src="../src/images/a_la_francaise.jpg" width="1200" height="800" alt="Coquilles Saint-Jacques"><!--A modifier suivant page-->
         
         <div class="restaurant__menu">
           <div class="restaurant__name">
