--- a/html/lanoteenchantee.html
+++ b/html/lanoteenchantee.html
@@ -32,7 +32,7 @@
       <section class="restaurant">
         
         <h2 class="displayNone">Photo La note enchantée</h2>
-        <img class="restaurant__image" src="../src/images/la_note_enchantee.jpg" alt="Homard et espuma de potiron">
+        <img class="restaurant__image" src="../src/images/la_note_enchantee.jpg" width="1200" height="800" alt="Homard et espuma de potiron">
         
         <div class="restaurant__menu">
           <div class="restaurant__name">
