--- a/html/lapalettedugout.html
+++ b/html/lapalettedugout.html
@@ -32,7 +32,7 @@
       <section class="restaurant">
         
         <h2 class="displayNone">Photo La palette du goût</h2>
-        <img class="restaurant__image" src="../src/images/la_palette_du_gout.jpg" alt="Filet de turbot">
+        <img class="restaurant__image" src="../src/images/la_palette_du_gout.jpg" width="1200" height="800" alt="Filet de turbot">
         
         <div class="restaurant__menu">
           <div class="restaurant__name">
