--- a/html/ledelicedessens.html
+++ b/html/ledelicedessens.html
@@ -32,7 +32,7 @@
       <section class="restaurant">
         
         <h2 class="displayNone">Photo Le délice des sens</h2>
-        <img class="restaurant__image" src="../src/images/le_delice_des_sens.jpg" alt="Poulet rôti aux herbes de Provence">
+        <img class="restaurant__image" src="../src/images/le_delice_des_sens.jpg" width="1200" height="800" alt="Poulet rôti aux herbes de Provence">
         
         <div class="restaurant__menu">
           <div class="restaurant__name">
