--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
           <!--Second restaurant-->
           <a href="html/lanoteenchantee.html" class="cardRestaurant cardRestaurant--new">
-            <img class="cardRestaurant__image" src="src/images/la_note_enchantee_small.jpg" alt="Mijoté de queue de boeuf">
+            <img class="cardRestaurant__image" src="src/images/la_note_enchantee_small.jpg" width="400" height="267" alt="Mijoté de queue de boeuf">
             <div class="cardRestaurant__info">
               <div class="cardRestaurant__text">
                 <h3 class="cardRestaurant__title">La note enchantée</h3>
@@ -167,7 +167,7 @@
 
           <!--Third restaurant-->
           <a href="html/alafrancaise.html" class="cardRestaurant">
-            <img class="cardRestaurant__image" src="src/images/a_la_francaise_small.jpg" alt="Coquilles Saint-Jacques">
+            <img class="cardRestaurant__image" src="src/images/a_la_francaise_small.jpg" width="400" height="267" alt="Coquilles Saint-Jacques">
             <div class="cardRestaurant__info">
               <div class="cardRestaurant__text">
                 <h3 class="cardRestaurant__title">À la française</h3>
@@ -189,7 +189,7 @@
 
           <!--Fourth restaurant-->
           <a href="html/ledelicedessens.html" class="cardRestaurant">
-            <img class="cardRestaurant__image" src="src/images/le_delice_des_sens_small.jpg" alt="Bouchée de homard croustillant">
+            <img class="cardRestaurant__image" src="src/images/le_delice_des_sens_small.jpg" width="400" height="267" alt="Bouchée de homard croustillant">
             <div class="cardRestaurant__info">
               <div class="cardRestaurant__text">
                 <h3 class="cardRestaurant__title">Le délice des sens</h3>
