Ajout dimensions sur première image

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <nav class="ourRestaurants__selection">
           <!--First restaurant-->
           <a href="html/lapalettedugout.html" class="cardRestaurant cardRestaurant--new">
-            <img class="cardRestaurant__image" src="src/images/la_palette_du_gout_small.jpg" alt="Filet de Turbot aux agrumes">
+            <img class="cardRestaurant__image" src="src/images/la_palette_du_gout_small.jpg" width="400" height="267" alt="Filet de Turbot aux agrumes">
             <div class="cardRestaurant__info">
               <div class="cardRestaurant__text">
                 <h3 class="cardRestaurant__title">La palette du goût</h3>
