--- a/html/lanoteenchantee.html
+++ b/html/lanoteenchantee.html
@@ -22,7 +22,7 @@
     <header>
       <div class="mySite">
         <div class="mySite__backToMenu">
-          <a href="../../index.html"><i class="fas fa-lg fa-arrow-left"></i></a>
+          <a href="../index.html"><i class="fas fa-lg fa-arrow-left"></i></a>
         </div> 
         <h1 class="mySite__title">ohmyfood</h1>
       </div>
